Add `--add-opens` vm parameter for DexArchiveBuilderTask
Bug: 243667039
Change-Id: Ia8bb6abbe7763f731b4f1db18d59531a9de849f7